# fopss2023

./: LICENSE  README.md  fopss2023.cabal  fopss2023.key  stack.yaml
STLC/: README.md  stack.yaml  stlc.cabal
STLC/src/: Examples.hs  Propositions.hs  Theorem.hs
STLC/src/Lemmata/: Substitution0.hs
intro/: ChangeLog.md  LICENSE
intro/src/: InsertSort.lhs  Intro.lhs  MergeSort.lhs
liquidate/: LICENSE  Liquidate-your-assets.key  README.md  liquidate.cabal  stack.yaml
liquidate/src/: ISort.hs  ISortLazy.hs  ISortSorted.hs  LList.hs  List.hs  RTick.hs
liquidate/src/Language/Haskell/Liquid/: ProofCombinators.hs
src/: GHCSort.lhs  List.lhs  ListTheorems.lhs  SortedList.lhs
